# prime-video-tauri

./: package-lock.json  package.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/ext/: custom.css  manifest.json
src-tauri/src/: lib.rs  main.rs
